# bitfinex-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  README.md
examples/src/: authenticated_channels.rs  main.rs  private_endpoints.rs  public_channels.rs  public_endpoints.rs
src/: account.rs  api.rs  auth.rs  book.rs  candles.rs  client.rs  currency.rs  errors.rs  events.rs  funding.rs  ledger.rs  lib.rs  model.rs  orders.rs  pairs.rs  positions.rs  precision.rs  ticker.rs  trades.rs  websockets.rs
