[package]
name = "bitfinex"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]

description = "Rust Library for the Bitfinex API"
keywords = ["cryptocurrency", "trading"]
documentation = "https://docs.rs/crate/bitfinex/"
repository = "https://github.com/wisespace-io/bitfinex-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/bitfinex-rs" }

[lib]
name = "bitfinex"
path = "src/lib.rs"

[dependencies]
clippy = { version = "0.0.200", optional = true }
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.11"
ring = "0.13.0-alpha2"
reqwest = "0.8"
url = "1.6"
log = "0.3"
tungstenite = "0.5.3"