[package]
name = "bitfinex"
version = "0.4.1"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]

description = "Rust Library for the Bitfinex API"
keywords = ["cryptocurrency", "trading", "bitcoin"]
documentation = "https://docs.rs/crate/bitfinex/"
repository = "https://github.com/wisespace-io/bitfinex-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/bitfinex-rs" }

[lib]
name = "bitfinex"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.12"
ring = "0.16"
reqwest = "0.9"
url = "2.1"
log = "0.3"
tungstenite = "0.9"
