[package]
name = "bitfinex-app"
version = "0.4.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]

[[bin]]
name = "private_endpoints"
path = "src/private_endpoints.rs"

[[bin]]
name = "public_endpoints"
path = "src/public_endpoints.rs"

[[bin]]
name = "public_channels"
path = "src/public_channels.rs"

[[bin]]
name = "authenticated_channels"
path = "src/authenticated_channels.rs"

[dependencies]
bitfinex = { path = "../" }
